Deleted a file and added an image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div>
-        <img src="GIFs and Images/E-Wallet.gif" alt="" id="gif-image" />
+        <img src="E-Wallet.gif" alt="" id="gif-image" />
       </div>
     </div>
 
